--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
       <div class="job">
         <h3 class="job-title">Sales Coordinator</h3>
-        <p class="company-name">Switz International Pvt Ltd. (01/05/2018 - Present)</p>
+        <p class="company-name">Switz International Pvt Ltd. (Feb-2024 - Present)</p>
         <ul>
           <li>Prepare and distribute detailed sales reports to track the performance of the sales team.</li>
           <li>Set clear and achievable sales targets for the team.</li>
